# wbr_control

./: .clangd  .gitignore  CMakeLists.txt  Kconfig  README.md  motors_table.md  prj.conf  west.yml
algorithms/: README.md
app/: CMakeLists.txt  app_main.h
channels/: README.md  arm_command_channel.cpp  arm_command_channel.h  arm_state_channel.cpp  arm_state_channel.h  can_raw_frame_queue.cpp  can_raw_frame_queue.h  chassis_command_channel.cpp  chassis_command_channel.h  chassis_state_channel.cpp  chassis_state_channel.h  chassismotors_feedback_raw.cpp  chassismotors_feedback_raw.hpp  chassismotors_send_raw.cpp  chassismotors_send_raw.hpp  gantry_command_channel.cpp  gantry_command_channel.h  gimbal_command_channel.cpp  gimbal_command_channel.h  gimbal_state_channel.cpp  gimbal_state_channel.h  imu_channel.cpp  imu_channel.h  motor_feedback_channel.cpp  motor_feedback_channel.h  referee_state_channel.cpp  referee_state_channel.h  remote_input_channel.cpp  remote_input_channel.h  remote_input_state.cpp  remote_input_state.hpp  serialservo_send_raw.cpp  serialservo_send_raw.hpp  system_status_channel.cpp  system_status_channel.h  uart_raw_frame_queue.cpp  uart_raw_frame_queue.h  usb_raw_frame_queue.cpp  usb_raw_frame_queue.h
debug/: CMakeLists.txt
docs/: AGENT_HANDOFF.md  ARCHITECTURE_REVIEW.md  CHASSIS_SPEED_MIGRATION_MAP.md  DEBUG_FEATURES.md  DIRECTORY_GUIDE.md  DIRECTORY_RESTRUCTURE_PLAN.md  LAYERING_DECOUPLING_STATUS.md  MIGRATION_BASELINE_CHECKLIST.md  MIGRATION_PLAN.md  MODULE_LIFECYCLE_POLICY.md  PLATFORM_LEGACY_ARCHIVE_POLICY.md  SMOKE_REGRESSION.md
modules/: README.md  thread_utils.h
platform/: CMakeLists.txt
protocols/: CMakeLists.txt  README.md
src/: main.cpp
test/cherryusb_cdc_acm_test/: CMakeLists.txt  DEBUG_REPORT.md  README.md  app.overlay
test/cherryusb_cdc_acm_test/src/: cdc_acm.c  main.c
test/cherryusb_cdc_acm_test/tools/: usb_cdc_perf.py
test/cherryusb_interrupt_test/: CMakeLists.txt  README.md  USB_INTERRUPT_TUTORIAL.md  app.overlay  prj.conf
test/cherryusb_interrupt_test/src/: int_test.c  main.c
test/cherryusb_interrupt_test/tools/: usb_interrupt_perf.py
(+292 files in other folders)
